Add new type of address and jquery effect

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 <input type="text" class="form-control new-state">
               </div>
             </div>
+            <div class="form-group">
+              <label for="new-zipcode">Zip Code</label>
+              <input type="text" class="form-control new-zipcode">
+            </div>
+          </div>
           </div>
           <span class="btn btn-primary" id="add-address">Another address</span>
           <button type="submit" class="btn">Add</button>
